# Mate_Strenght

./: Calculator.py  Country.json  Home.py  Login.py  Login_or_signup.py  Signup.py  Signup_2.py  Welcome.py  codes.txt  pyproject.toml
Backend/: Home.py  Signin.py  Signup.py
Calculator_Interfaces/: BMI.py  BMR.py  Calculator.py  MHR.py  Macros.py  TDEE.py  Water_Intake.py
Constant/: Controls.py  data.py  variables.py
Data/: Json_Data.py  data.ipynb  exercise_structure.json  image.ipynb
